examples/istio-ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
  labels:
    app: application
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application
      version: v1
  template:
    metadata:
      labels:
        app: application
        version: v1
    spec:
      containers:
        - name: application
          image: seemscloud/fastapi:latest
          imagePullPolicy: Always
