examples/istio-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application
spec:
  selector:
    app: application
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 8080
