examples/istio-ingress/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: application
spec:
  selector:
    istio: ingress-gateway
  servers:
    - hosts:
        - "foo.localhost"
      port:
        name: http
        number: 80
        protocol: HTTP
    - hosts:
        - "foo.localhost"
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: application-tls
