examples/istio-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-istio
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
    - host: "foo.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: application
                port:
                  number: 8080
  tls:
    - hosts:
        - "moo.localhost"
      secretName: application-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: "moo.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: application
                port:
                  number: 8080
  tls:
    - hosts:
        - "moo.localhost"
      secretName: application-tls
