examples/istio-ingress/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: application
spec:
  gateways:
    - application
  hosts:
    - "foo.localhost"
  http:
    - route:
        - destination:
            host: application
            port:
              number: 8080
